[package]
name = "rye"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.18", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
termimad = "0.34"
crossterm = "0.29"
rustyline = "17.0"
dirs = "6.0"
async-trait = "0.1"
futures = "0.3"
skim = "0.15"
